--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/node": "20.4.4",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
+    "@wojtekmaj/react-daterange-picker": "^5.4.2",
     "autoprefixer": "10.4.14",
+    "dateformat": "^5.0.3",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
@@ -23,5 +25,8 @@
     "sharp": "^0.32.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/dateformat": "^5.0.0"
   }
 }
