--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-kakao-maps-sdk": "^1.1.11",
+    "react-query": "^3.39.3",
     "recoil": "^0.7.7",
     "sharp": "^0.32.5",
     "tailwindcss": "3.3.3",
