--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@types/dateformat": "^5.0.0"
+    "@types/dateformat": "^5.0.0",
+    "prettier": "^3.4.2"
   }
 }
