--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.1",
     "@types/node": "20.4.4",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
     "@wojtekmaj/react-daterange-picker": "^5.4.2",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dateformat": "^5.0.3",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "lucide-react": "^0.469.0",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
@@ -25,7 +29,9 @@
     "react-query": "^3.39.3",
     "recoil": "^0.7.7",
     "sharp": "^0.32.5",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.6"
   },
   "devDependencies": {
