--- a/package.json
+++ b/package.json
@@ -11,32 +11,32 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
-    "@types/node": "20.4.4",
-    "@types/react": "18.2.16",
-    "@types/react-dom": "18.2.7",
-    "@wojtekmaj/react-daterange-picker": "^5.4.2",
+    "@tanstack/react-query": "^5.62.10",
+    "@wojtekmaj/react-daterange-picker": "^6.0.0",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dateformat": "^5.0.3",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.12",
     "lucide-react": "^0.469.0",
-    "next": "13.4.12",
+    "next": "15.1.2",
     "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-kakao-maps-sdk": "^1.1.11",
-    "react-query": "^3.39.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "recoil": "^0.7.7",
     "sharp": "^0.32.5",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/dateformat": "^5.0.0",
+    "@types/node": "20.4.4",
+    "@types/react": "18.2.16",
+    "@types/react-dom": "18.2.7",
+    "eslint": "9.17.0",
+    "eslint-config-next": "15.1.2",
     "kakao.maps.d.ts": "^0.1.40",
     "prettier": "^3.4.2"
   }
