--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toggle": "^1.1.1",
+    "@radix-ui/react-toggle-group": "^1.1.1",
     "@tanstack/react-query": "^5.62.10",
     "@wojtekmaj/react-daterange-picker": "^6.0.0",
     "autoprefixer": "10.4.14",
