--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "dateformat": "^5.0.3",
     "lucide-react": "^0.469.0",
+    "motion": "^12.0.3",
     "next": "15.1.2",
     "postcss": "8.4.27",
     "react": "19.0.0",
